fixed some alignment

--- a/src/components/chooseus/ChooseUs.css
+++ b/src/components/chooseus/ChooseUs.css
@@ -15,6 +15,6 @@
 
 @media screen and (min-width: 601px) and (max-width: 1024px) {
   .choose-us img {
-    height: 50vh;
+    height: 37vh;
   }
 }
